--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "use-sass",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://doppler.github.com/vape-calc",
   "dependencies": {
+    "gh-pages": "^2.0.0",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.5.2",
@@ -10,6 +12,8 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
